fix: permanently show the vertical scrollbar

--- a/src/global.css
+++ b/src/global.css
@@ -4,4 +4,5 @@ body {
 	font-family: Segoe UI, Helvetica Neue, -apple-system, system-ui, BlinkMacSystemFont, Roboto, Arial,
 		sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 	font-size: 1.4rem;
+	overflow-y: scroll;
 }
